--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>Mi AutoBiografia</title>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+    <img src="./assest/my_photo_1.jpg" alt="mi photo" loading="lazy" style="width: 190px; height: auto; border-radius: 50px;">
+    <h1>Ronny Tomas Araujo Marte</h1>
+    <section>
+        <h2>Biografía</h2>
+        <p>
+            
+        </p>
+    </section>
 </body>
 </html>
