--- a/index.html
+++ b/index.html
@@ -5,13 +5,27 @@
     <title>Mi AutoBiografia</title>
 </head>
 <body>
-    <img src="./assest/my_photo_1.jpg" alt="mi photo" loading="lazy" style="width: 190px; height: auto; border-radius: 50px;">
-    <h1>Ronny Tomas Araujo Marte</h1>
-    <section>
-        <h2>Biografía</h2>
-        <p>
-            
-        </p>
-    </section>
+    <center>
+        <br>
+        <img src="./assest/my_photo_1.jpg" alt="mi photo" loading="lazy" style="width: 190px; height: auto; border-radius: 50px;">
+        <h1>Ronny Tomas Araujo Marte</h1>
+        <section>
+            <h2>Biografía</h2>
+            <p>
+                Nací en Santo Domingo Este, el 16 de agosto de 1995. Creí junto a mis hermanas menores y mi madre.
+            </p>
+            <p>
+                Curse la primaria en el Club Mauricio Báez. Luego Empece a los 12 años la secundaria en el Liceo Nocturno Mauricio Báez, durante esos 4 años de secundaria pase varios trabajitos para poder comprarme algún gusto que mi madre no podría dame en esos momentos.
+                También es esos tiempos conseguí mi primera computadora, para ser más específico, una tía me regalo una PC que tenía abandonada por su casa y me dijo:"Creo que funciona, si logras arreglarla es tuya.". Yo todo motivado me la lleve a hombros a mi casa, después de muchos esfuerzos y preguntar logre que encendiera (^.^).
+            </p>
+            <p>
+                Pasando el tiempo, experimente mucho con ella y descubrí mi curiosidad sobre las computadoras y el software. Al graduarme de secundaria, dure aproximadamente 1 año trabajando mientras pensaba que estudiaría y a cuál universidad iría. Me decidí por <strong>Licenciatura en informática</strong> en la Universidad Autónoma de Santo Domingo(UASD), la cual comencé en el 2015 en su segundo semestre.
+            </p>
+            <p>
+                Actualmente, en 2023, Solo me quedan al rededor de 10 materias para pasar a Tesis, ha sido un camino largo y muchos obstáculos, pero en diciembre del 2022 aplique a una pasantía como Developer Javascript. Logre desenvolverme y aprender mucho.
+                Ahora Soy <strong>Backend Developer PHP</strong> en la misma empresa y espero seguir mejorando poco a poco.
+            </p>
+        </section>
+    </center>
 </body>
 </html>
