Horario y redes sociales agregados

--- a/index.html
+++ b/index.html
@@ -9,23 +9,231 @@
         <br>
         <img src="./assest/my_photo_1.jpg" alt="mi photo" loading="lazy" style="width: 190px; height: auto; border-radius: 50px;">
         <h1>Ronny Tomas Araujo Marte</h1>
-        <section>
-            <h2>Biografía</h2>
-            <p>
-                Nací en Santo Domingo Este, el 16 de agosto de 1995. Creí junto a mis hermanas menores y mi madre.
-            </p>
-            <p>
-                Curse la primaria en el Club Mauricio Báez. Luego Empece a los 12 años la secundaria en el Liceo Nocturno Mauricio Báez, durante esos 4 años de secundaria pase varios trabajitos para poder comprarme algún gusto que mi madre no podría dame en esos momentos.
-                También es esos tiempos conseguí mi primera computadora, para ser más específico, una tía me regalo una PC que tenía abandonada por su casa y me dijo:"Creo que funciona, si logras arreglarla es tuya.". Yo todo motivado me la lleve a hombros a mi casa, después de muchos esfuerzos y preguntar logre que encendiera (^.^).
-            </p>
-            <p>
-                Pasando el tiempo, experimente mucho con ella y descubrí mi curiosidad sobre las computadoras y el software. Al graduarme de secundaria, dure aproximadamente 1 año trabajando mientras pensaba que estudiaría y a cuál universidad iría. Me decidí por <strong>Licenciatura en informática</strong> en la Universidad Autónoma de Santo Domingo(UASD), la cual comencé en el 2015 en su segundo semestre.
-            </p>
-            <p>
-                Actualmente, en 2023, Solo me quedan al rededor de 10 materias para pasar a Tesis, ha sido un camino largo y muchos obstáculos, pero en diciembre del 2022 aplique a una pasantía como Developer Javascript. Logre desenvolverme y aprender mucho.
-                Ahora Soy <strong>Backend Developer PHP</strong> en la misma empresa y espero seguir mejorando poco a poco.
-            </p>
-        </section>
+        <div style="width: 85%;">
+            <section>
+                    <h2>Biografía</h2>
+                    <p>
+                        Nací en Santo Domingo Este, el 16 de agosto de 1995. Creí junto a mis hermanas menores y mi madre.
+                    </p>
+                    <p>
+                        Curse la primaria en el Club Mauricio Báez. Luego Empece a los 12 años la secundaria en el Liceo Nocturno Mauricio Báez, durante esos 4 años de secundaria pase varios trabajitos para poder comprarme algún gusto que mi madre no podría dame en esos momentos.
+                        También es esos tiempos conseguí mi primera computadora, para ser más específico, una tía me regalo una PC que tenía abandonada por su casa y me dijo:"Creo que funciona, si logras arreglarla es tuya.". Yo todo motivado me la lleve a hombros a mi casa, después de muchos esfuerzos y preguntar logre que encendiera (^.^).
+                    </p>
+                    <p>
+                        Pasando el tiempo, experimente mucho con ella y descubrí mi curiosidad sobre las computadoras y el software. Al graduarme de secundaria, dure aproximadamente 1 año trabajando mientras pensaba que estudiaría y a cuál universidad iría. Me decidí por <strong>Licenciatura en informática</strong> en la Universidad Autónoma de Santo Domingo(UASD), la cual comencé en el 2015 en su segundo semestre.
+                    </p>
+                    <p>
+                        Actualmente, en 2023, Solo me quedan al rededor de 10 materias para pasar a Tesis, ha sido un camino largo y muchos obstáculos, pero en diciembre del 2022 aplique a una pasantía como Developer Javascript. Logre desenvolverme y aprender mucho.
+                        Ahora Soy <strong>Backend Developer PHP</strong> en la misma empresa y espero seguir mejorando poco a poco.
+                    </p>
+            </section>
+            <section>
+                <h2>Horario Semanal del Semestre 2023-2</h2>
+                    <table border="1">
+                        <thead>
+                            <th style="width: 50px;">Hora</th>
+                            <th>Lunes</th>
+                            <th>Martes</th>
+                            <th>Miercoles</th>
+                            <th>Jueves</th>
+                            <th>Viernes</th>
+                            <th>Sabado</th>
+                            <th>Domingo</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>7 am</td>
+                                <td></td>
+                                <td></td>
+                                <td rowspan="2" bgcolor="silver">
+                                    INF 5170-01
+                                    19386 Class
+                                    7:00 AM-8:50 AM
+                                    LIF 103
+                                </td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>8 am</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>9 am</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>10 am</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>11 am</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>12 pm</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>1 pm</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>2 pm</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>3 pm</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td rowspan="3" bgcolor="silver">
+                                    MAT 3920-02
+                                    33761 Class
+                                    3:00 PM-5:50 PM
+                                    FC 002
+                                </td>
+                                <td rowspan="3" bgcolor="silver">
+                                    MAT 3920-02
+                                    33761 Class
+                                    3:00 PM-4:50 PM
+                                    AB 213
+                                </td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>4 pm</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>5 pm</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>6 pm</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>7 pm</td>
+                                <td rowspan="3" bgcolor="silver">
+                                    EST 2110-01
+                                    12846 Class
+                                    7:00 PM-9:50 PM
+                                    FE 308
+                                </td>
+                                <td></td>
+                                <td></td>
+                                <td rowspan="3" bgcolor="silver">
+                                    EST 2110-01
+                                    12846 Class
+                                    7:00 PM-9:50 PM
+                                    FE 308
+                                </td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>8 pm</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>9 pm</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+            </section>
+        </div>
     </center>
 </body>
+<center>
+    <footer>
+        <br>
+        <table>
+            <td></td>
+            <td>
+                <a href="https://github.com/RonnyAraujoTest">
+                    <img src="./assest/github-icono.png" alt="github" width="25px">
+                </a>
+            </td>
+            <td>
+                <a href="https://www.linkedin.com/in/ronny-araujo-39b0021ba/">
+                    <img src="./assest/linkedin-logo.png" alt="github" width="25px">
+                </a>
+            </td>
+            <td>
+                <a href="https://web.facebook.com/ronnytomas.araujomarte">
+                    <img src="./assest/facebook-logo.png" alt="github" width="25px">
+                </a>
+            </td>
+        </table>
+    </footer>
+</center>
 </html>
